cli/tests/snapshots/cli_snapshot_tests__submit_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Submit data to fill a target

Usage: soma submit [OPTIONS] --target-id <TARGET_ID> --data-commitment <DATA_COMMITMENT> --data-url <DATA_URL> --data-checksum <DATA_CHECKSUM> --data-size <DATA_SIZE> --model-id <MODEL_ID> --embedding <EMBEDDING> --distance-score <DISTANCE_SCORE> --bond-coin <BOND_COIN>

Options:
      --target-id <TARGET_ID>
          Target ID to submit to
      --data-commitment <DATA_COMMITMENT>
          Hex-encoded commitment to the data (32 bytes, hash of raw data)
      --data-url <DATA_URL>
          URL where the data is hosted
      --data-checksum <DATA_CHECKSUM>
          Hex-encoded checksum of the data file (32 bytes)
      --data-size <DATA_SIZE>
          Size of the data file in bytes
      --model-id <MODEL_ID>
          Model ID to use for this submission (must be in target's model_ids)
      --embedding <EMBEDDING>
          Embedding vector (comma-separated f32 values)
      --distance-score <DISTANCE_SCORE>
          Distance score (f32, must be <= target threshold)
      --bond-coin <BOND_COIN>
          Coin object to use for bond payment
      --tx-digest
          Compute the transaction digest and print it out, but do not execute
      --simulate
          Perform a dry run (simulation) of the transaction, without executing it
      --serialize-unsigned-transaction
          Serialize the unsigned transaction data (base64) instead of executing. Use with `soma client execute-signed-tx --tx-bytes <TX_BYTES>`
      --serialize-signed-transaction
          Serialize the signed transaction data (base64) instead of executing. Use with `soma client execute-combined-signed-tx --signed-tx-bytes <SIGNED_TX_BYTES>`
      --json
          Output as JSON
  -h, --help
          Print help

EXAMPLES:
    soma submit --target-id 0xTARGET... --data-commitment 0xHEX... \
        --data-url https://... --data-checksum 0xHEX... --data-size 1024 \
        --model-id 0xMODEL... --embedding 0.1,0.2,0.3 \
        --distance-score 0.5 --bond-coin 0xCOIN...
