cli/tests/snapshots/cli_snapshot_tests__target_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Query and inspect targets in the mining competition

Usage: soma target [OPTIONS] <COMMAND>

Commands:
  list  List targets
  info  Show target information
  help  Print this message or the help of the given subcommand(s)

Options:
      --json  Output as JSON
  -h, --help  Print help

EXAMPLES:
    soma target list
    soma target list --status open
    soma target info 0xTARGET_ID
