cli/tests/snapshots/cli_snapshot_tests__transfer_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Transfer SOMA or USDC to a recipient

Usage: soma transfer [OPTIONS] <COMMAND>

Commands:
  soma  Transfer SOMA to a recipient
  usdc  Transfer USDC to a recipient
  help  Print this message or the help of the given subcommand(s)

Options:
      --json  Output as JSON
  -h, --help  Print help

EXAMPLES:
    soma transfer soma 10 0x1234...5678
    soma transfer usdc 1.50 alice

For non-fungible transfers (objects), use `soma object transfer`.
