cli/tests/snapshots/cli_snapshot_tests__unstake_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
assertion_line: 186
expression: stdout
---
Withdraw staked SOMA

Usage: soma unstake [OPTIONS] --pool <POOL>

Options:
      --pool <POOL>                     StakingPool ObjectID. Use `soma stakes` to list yours
      --amount <AMOUNT>                 Amount to withdraw in SOMA. Omit to drain the entire row
      --tx-digest                       Compute the transaction digest and print it out, but do not execute
      --simulate                        Perform a dry run (simulation) of the transaction, without executing it
      --serialize-unsigned-transaction  Serialize the unsigned transaction data (base64) instead of executing. Use with `soma tx execute-signed --tx-bytes <TX_BYTES>`
      --serialize-signed-transaction    Serialize the signed transaction data (base64) instead of executing. Use with `soma tx execute-combined-signed --signed-tx-bytes <SIGNED_TX_BYTES>`
      --json                            Output as JSON
  -h, --help                            Print help

EXAMPLES:
    soma unstake --pool 0xPOOL_ID
    soma unstake --pool 0xPOOL_ID --amount 5
