cli/tests/snapshots/cli_snapshot_tests__validator_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Manage validators (register, set gas price, commission)

Usage: soma validator [OPTIONS] [COMMAND]

Commands:
  make-validator-info  Generate validator key files and info
  join-committee       Request to join the validator committee
  leave-committee      Request to leave the validator committee
  list                 List all active and pending validators
  display-metadata     Display validator metadata
  update-metadata      Update validator metadata
  set-commission-rate  Set commission rate for the next epoch
  report-validator     Report or un-report a validator
  register-bridge-key  Pre-register this validator's bridge keypair so they're eligible for the next epoch's bridge committee rotation. Must be called before the bridge can sign on this validator's behalf
  help                 Print this message or the help of the given subcommand(s)

Options:
      --client.config <CONFIG>  Sets the file storing the state of our user accounts (an empty one will be created if missing)
      --client.env <ENV>        The SOMA environment to use. This must be present in the current config file
  -y, --yes                     Create a new soma config without prompting if none exists
      --json                    Output as JSON
  -h, --help                    Print help

EXAMPLES:
    soma validator display-metadata
    soma validator list
