cli/tests/snapshots/cli_snapshot_tests__wallet_help.snap
---
source: cli/tests/cli_snapshot_tests.rs
expression: stdout
---
Manage wallet addresses and keys

Usage: soma wallet [OPTIONS] <COMMAND>

Commands:
  active  Show the current active address
  list    List all addresses managed by the wallet
  new     Generate a new address and keypair
  remove  Remove an address from the wallet
  switch  Switch the active address
  export  Export the private key of the active address
  help    Print this message or the help of the given subcommand(s)

Options:
      --json  Output as JSON
  -h, --help  Print help

EXAMPLES:
    soma wallet list
    soma wallet new --alias my-wallet
    soma wallet switch 0x1234...5678
